pres, posts, separar algos aux y más

--- a/modulos/modulo_coordenada.tex
+++ b/modulos/modulo_coordenada.tex
@@ -71,7 +71,7 @@
 
 	\TituloDis{Función de Abstracción}
 
-	\Abs[eCoor]{coor}[e]{c}{latitud(c) == e.lat $\land$ longitud(c) == e.long}
+	\Abs[eCoor]{coor}[e]{c}{latitud(c) = e.lat $\land$ longitud(c) = e.long}
 
 \end{Representacion}
 
