--- a/resolucion.tex
+++ b/resolucion.tex
@@ -5,7 +5,10 @@
 \usepackage{aed2-symb,aed2-itef,aed2-tad,aed2-dis,caratula}
 \usepackage[pdfencoding=auto, colorlinks=true, linkcolor=blue]{hyperref}
 \usepackage[boxruled, longend]{algorithm2e}
+
 \SetKwComment{Comment}{}{}
+\SetKwInput{Pre}{Pre}
+\SetKwInput{Post}{Post}
 
 \newcommand\complejidad{\textbf{Complejidad}}
 \newcommand\justifcomp{\textbf{Justificación}}
